[gd_scene format=3 uid="uid://2u14xth0swvf"]

[ext_resource type="Theme" uid="uid://cpu5y4uke26il" path="res://editor/editor_theme.tres" id="1_ycap1"]
[ext_resource type="Script" uid="uid://ol61oobgtef7" path="res://editor/editor.gd" id="2_fjngd"]
[ext_resource type="Script" uid="uid://cx3dmco302t6f" path="res://editor/character_sets.gd" id="3_3meo8"]
[ext_resource type="Texture2D" uid="uid://b2cs0cghguj0d" path="res://assets/art/paul_rudd.png" id="4_j82do"]
[ext_resource type="Script" uid="uid://tp1ualna8qyk" path="res://editor/dialog_list.gd" id="5_3meo8"]
[ext_resource type="PackedScene" uid="uid://qpk85gdxmfg4" path="res://editor/dialog_row.tscn" id="6_swf4p"]
[ext_resource type="Script" uid="uid://cwog6vjtjisyc" path="res://editor/dialog_inspector.gd" id="8_aws7q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjngd"]
bg_color = Color(0.16078432, 0.16078432, 0.16078432, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[node name="Editor" type="Control" unique_id=943870841]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ycap1")
script = ExtResource("2_fjngd")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1321509252]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.078431375, 0.078431375, 0.078431375, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1278320432]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=595646637]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer/HBoxContainer" unique_id=975976180]
layout_mode = 2
size_flags_horizontal = 3

[node name="PopupMenu" type="PopupMenu" parent="VBoxContainer/HBoxContainer/MenuBar" unique_id=276736797]
oversampling_override = 1.0
title = "File"
size = Vector2i(110, 100)
item_count = 2
item_0/text = "Save"
item_0/id = 0
item_1/text = "Quit"
item_1/id = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=106855887]
layout_mode = 2
text = "Open File: NOTHING!!"

[node name="Split" type="HSplitContainer" parent="VBoxContainer" unique_id=704531347]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="TabContainer" parent="VBoxContainer/Split" unique_id=296946382]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
current_tab = 0

[node name="CharacterSets" type="ScrollContainer" parent="VBoxContainer/Split/VBoxContainer" unique_id=412978122]
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("3_3meo8")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Split/VBoxContainer/CharacterSets" unique_id=193240221]
layout_mode = 2
size_flags_horizontal = 3

[node name="OnlySets" type="VBoxContainer" parent="VBoxContainer/Split/VBoxContainer/CharacterSets/VBoxContainer" unique_id=454939564]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Split/VBoxContainer/CharacterSets/VBoxContainer" unique_id=233612643]
layout_mode = 2
size_flags_horizontal = 4
text = "Create New Character Set (Unimplemented)"

[node name="DialogNodes" type="VSplitContainer" parent="VBoxContainer/Split" unique_id=2111868643]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Split/DialogNodes" unique_id=955046968]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogList" type="VBoxContainer" parent="VBoxContainer/Split/DialogNodes/ScrollContainer" unique_id=134758397]
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("5_3meo8")

[node name="DialogRow" parent="VBoxContainer/Split/DialogNodes/ScrollContainer/DialogList" unique_id=1592799768 instance=ExtResource("6_swf4p")]
layout_mode = 2

[node name="DialogInspector" type="PanelContainer" parent="VBoxContainer/Split/DialogNodes" unique_id=1332771134]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("StyleBoxFlat_fjngd")
script = ExtResource("8_aws7q")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Split/DialogNodes/DialogInspector" unique_id=1898034104]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer" unique_id=99143752]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("4_j82do")
expand_mode = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer" unique_id=677666405]
layout_mode = 2
size_flags_horizontal = 3
text = "This is where the text of the dialog would go (it would also be displayed up there)"
wrap_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer" unique_id=247688393]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer" unique_id=1639664170]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HFlowContainer" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer" unique_id=1504937434]
layout_mode = 2

[node name="ChangeImage" type="Button" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" unique_id=1178264946]
layout_mode = 2
size_flags_horizontal = 0
text = "Change Character Sprite"

[node name="Remove" type="Button" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" unique_id=753931870]
layout_mode = 2
size_flags_horizontal = 0
text = "Remove"

[node name="Label" type="Label" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer" unique_id=1153200953]
layout_mode = 2
text = "Target Values"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer" unique_id=949050148]
layout_mode = 2
columns = 4

[node name="Padding" type="Control" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=2089503852]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label1" type="Label" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=670628386]
layout_mode = 2
size_flags_horizontal = 3
text = "Flirty"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=709708736]
layout_mode = 2
size_flags_horizontal = 3
text = "Funny"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=111056006]
layout_mode = 2
size_flags_horizontal = 3
text = "Sentiment"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=560119670]
layout_mode = 2
size_flags_horizontal = 3
text = "Minimum"
horizontal_alignment = 1

[node name="FlirtyMin" type="SpinBox" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=509990630]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true

[node name="FunnyMin" type="SpinBox" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=1544462704]
layout_mode = 2
max_value = 1.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="SentimentMin" type="SpinBox" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=281987390]
layout_mode = 2
max_value = 1.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="Label5" type="Label" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=1529475886]
layout_mode = 2
size_flags_horizontal = 3
text = "Maximum"
horizontal_alignment = 1

[node name="FlirtyMax" type="SpinBox" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=886742362]
layout_mode = 2
max_value = 1.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="FunnyMax" type="SpinBox" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=1308725702]
layout_mode = 2
max_value = 1.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="SentimentMax" type="SpinBox" parent="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" unique_id=502130320]
layout_mode = 2
max_value = 1.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="Padding" type="Control" parent="VBoxContainer/Split" unique_id=1432982589]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="QuitConfirmation" type="ConfirmationDialog" parent="." unique_id=2105509429]
oversampling_override = 1.0
initial_position = 2
size = Vector2i(500, 109)
dialog_text = "There are unsaved changes! Are you sure you want to quit?"
cancel_button_text = "Keep Working"

[node name="DeleteNodeConfirmation" type="ConfirmationDialog" parent="." unique_id=553256129]
oversampling_override = 1.0
initial_position = 2
size = Vector2i(500, 109)
dialog_text = "Are you sure you want to delete this dialog node? This action may be irreversible!"
cancel_button_text = "Don't!"

[connection signal="index_pressed" from="VBoxContainer/HBoxContainer/MenuBar/PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="text_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/TextEdit" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/ChangeImage" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_change_image_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/Remove" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_remove_pressed"]
[connection signal="value_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer/FlirtyMin" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_mood_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer/FunnyMin" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_mood_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer/SentimentMin" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_mood_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer/FlirtyMax" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_mood_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer/FunnyMax" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_mood_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/DialogNodes/DialogInspector/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer/SentimentMax" to="VBoxContainer/Split/DialogNodes/DialogInspector" method="_on_mood_value_changed"]
